--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "homepage": "http://www.doctrine-project.org",
     "license": "LGPL",
     "authors": [
-        {"name": "Jonathan H. Wage", "email": "jonwage@gmail.com"},
+        {"name": "Jonathan H. Wage", "email": "jonwage@gmail.com"}
     ],
     "require": {
         "php": ">=5.3.2",
